--- a/contrib/extensions_metadata.yaml
+++ b/contrib/extensions_metadata.yaml
@@ -139,3 +139,8 @@ envoy.upstreams.http.tcp.golang:
   - envoy.upstreams
   security_posture: requires_trusted_downstream_and_upstream
   status: alpha
+envoy.load_balancing_policies.peak_ewma:
+  categories:
+  - envoy.load_balancing
+  security_posture: requires_trusted_downstream_and_upstream
+  status: alpha
