Add comprehensive integration tests for Peak EWMA load balancer
This commit adds both Docker-based and C++ integration test suites to validate Peak EWMA functionality:

* Docker integration tests with real Envoy containers and nginx upstreams
* Python test script that creates artificial latency differences and measures routing behavior
* C++ integration tests using Envoy's testing framework with artificial delays
* Comprehensive test documentation and multiple testing approaches
* Tests validate P2C distribution, latency-aware routing, and configuration acceptance
* Added test visibility to Peak EWMA library BUILD file

--- a/contrib/envoy/extensions/load_balancing_policies/peak_ewma/v3alpha/source/BUILD
+++ b/contrib/envoy/extensions/load_balancing_policies/peak_ewma/v3alpha/source/BUILD
@@ -29,6 +29,7 @@ envoy_cc_library(
         "load_balancer_base.h",
     ],
     repository = "@envoy",
+    visibility = ["//test:__subpackages__"],
     deps = [
         # REMOVED the forbidden dependency on //source/extensions/...:load_balancer_lib
         "//source/common/common:utility_lib",
