Restructure Peak EWMA extension to separate load balancer and HTTP filter
- Move HTTP filter to dedicated directory structure following Envoy conventions
- Create proper protobuf configuration for HTTP filter
- Update namespaces: load balancer stays in LoadBalancingPolicies::PeakEwma,
  HTTP filter moves to HttpFilters::PeakEwma
- Fix BUILD file dependencies and visibility for test integration
- Register HTTP filter in contrib_build_config.bzl
- Remove deprecated filter files from load balancer directory

The Peak EWMA extension now properly separates concerns:
- Load balancer: contrib/envoy/extensions/load_balancing_policies/peak_ewma/
- HTTP filter: contrib/envoy/extensions/filters/http/peak_ewma/

This enables the HTTP filter to collect RTT metrics for the load balancer
while maintaining clean separation of functionality.

--- a/contrib/envoy/extensions/load_balancing_policies/peak_ewma/v3alpha/source/BUILD
+++ b/contrib/envoy/extensions/load_balancing_policies/peak_ewma/v3alpha/source/BUILD
@@ -13,17 +13,17 @@ envoy_cc_library(
     name = "peak_ewma_lb_lib",
     srcs = [
         "peak_ewma_lb.cc",
-        "peak_ewma_filter.cc",
-        "peak_ewma_filter_config.cc",
     ],
     hdrs = [
         "ewma.h",
         "peak_ewma_lb.h",
-        "peak_ewma_filter.h",
-        "peak_ewma_filter_config.h",
     ],
     repository = "@envoy",
-    visibility = ["//contrib/envoy/extensions/load_balancing_policies/peak_ewma/v3alpha/test:__pkg__"],
+    visibility = [
+        "//contrib/envoy/extensions/load_balancing_policies/peak_ewma/v3alpha/test:__pkg__",
+        "//contrib/envoy/extensions/filters/http/peak_ewma/v3alpha/source:__pkg__",
+        "//test/extensions/load_balancing_policies/peak_ewma:__pkg__",
+    ],
     deps = [
         "//source/common/common:utility_lib",
         "//source/common/config:utility_lib",
