Add comprehensive tests for Peak EWMA HTTP filter
- Create test suite for PeakEwmaRttFilter covering core functionality
- Test decodeHeaders/encodeHeaders flow and RTT measurement logic
- Test various scenarios: no upstream host, upstream host without LB policy data
- Test multiple request/response cycles and end_stream flag handling
- Add visibility for HTTP filter test package to load balancing policy library
- Achieve test coverage for previously untested HTTP filter component

--- a/contrib/envoy/extensions/load_balancing_policies/peak_ewma/v3alpha/source/BUILD
+++ b/contrib/envoy/extensions/load_balancing_policies/peak_ewma/v3alpha/source/BUILD
@@ -22,6 +22,7 @@ envoy_cc_library(
     visibility = [
         "//contrib/envoy/extensions/load_balancing_policies/peak_ewma/v3alpha/test:__pkg__",
         "//contrib/envoy/extensions/filters/http/peak_ewma/v3alpha/source:__pkg__",
+        "//contrib/envoy/extensions/filters/http/peak_ewma/v3alpha/test:__pkg__",
         "//test/extensions/load_balancing_policies/peak_ewma:__pkg__",
     ],
     deps = [
