fix(peak_ewma): Update tests for renamed classes and fix test issues
- Rename cost_calculator_test.cc → cost_test.cc and update class references
- Fix integration test to remove ThreadAware dependency
- Update config test to use correct class names and exception handling
- Fix HTTP filter test to use PeakEwmaHostLbPolicyData instead of GlobalHostStats
- Revert EWMA calculation changes to maintain test compatibility

--- a/contrib/envoy/extensions/load_balancing_policies/peak_ewma/v3alpha/test/BUILD
+++ b/contrib/envoy/extensions/load_balancing_policies/peak_ewma/v3alpha/test/BUILD
@@ -47,8 +47,8 @@ envoy_cc_test(
 )
 
 envoy_cc_test(
-    name = "cost_calculator_test",
-    srcs = ["cost_calculator_test.cc"],
+    name = "cost_test",
+    srcs = ["cost_test.cc"],
     deps = [
         "//contrib/envoy/extensions/load_balancing_policies/peak_ewma/v3alpha/source:peak_ewma_lb_lib",
     ],
