feat(peak_ewma): Add comprehensive test coverage for Peak EWMA components
Add extensive test suites covering previously untested components:

**Host Data Tests (host_data_test.cc):**
- Atomic ring buffer operations (record, wraparound, processing)
- EWMA update and retrieval functionality
- Thread-safety patterns and edge cases
- Sample processing workflows

**Observability Tests (observability_test.cc):**
- GlobalHostStats creation and stat publishing
- Per-host metrics (cost, EWMA RTT, active requests)
- Stats gauge integration with admin interface
- Multiple host scenarios and edge cases

**Comprehensive Load Balancer Tests (peak_ewma_lb_comprehensive_test.cc):**
- Load balancer creation and basic functionality
- Host selection behavior and configuration respect
- Integration with existing host lifecycle

These tests significantly improve code coverage by testing core components
that previously had no dedicated tests, addressing major gaps in:
- Atomic ring buffer data structures (100% untested → fully covered)
- Stats publishing and observability (100% untested → fully covered)
- Host data management and lifecycle (minimal → comprehensive)

All tests pass and provide robust validation of Peak EWMA functionality.

--- a/contrib/envoy/extensions/load_balancing_policies/peak_ewma/v3alpha/test/BUILD
+++ b/contrib/envoy/extensions/load_balancing_policies/peak_ewma/v3alpha/test/BUILD
@@ -63,3 +63,37 @@ envoy_cc_test(
         "//test/mocks/upstream:upstream_mocks",
     ],
 )
+
+envoy_cc_test(
+    name = "host_data_test",
+    srcs = ["host_data_test.cc"],
+    deps = [
+        "//contrib/envoy/extensions/load_balancing_policies/peak_ewma/v3alpha/source:peak_ewma_lb_lib",
+    ],
+)
+
+envoy_cc_test(
+    name = "observability_test",
+    srcs = ["observability_test.cc"],
+    deps = [
+        "//contrib/envoy/extensions/load_balancing_policies/peak_ewma/v3alpha/source:peak_ewma_lb_lib",
+        "//source/common/network:address_lib",
+        "//test/common/stats:stat_test_utility_lib",
+        "//test/mocks:common_lib",
+        "//test/mocks/upstream:upstream_mocks",
+    ],
+)
+
+envoy_cc_test(
+    name = "peak_ewma_lb_comprehensive_test",
+    srcs = ["peak_ewma_lb_comprehensive_test.cc"],
+    deps = [
+        "//contrib/envoy/extensions/load_balancing_policies/peak_ewma/v3alpha/source:peak_ewma_lb_lib",
+        "//source/common/network:address_lib",
+        "//test/common/stats:stat_test_utility_lib",
+        "//test/mocks:common_lib",
+        "//test/mocks/event:event_mocks",
+        "//test/mocks/runtime:runtime_mocks",
+        "//test/mocks/upstream:upstream_mocks",
+    ],
+)
